Added API configuration and logic
